fixed overflow

--- a/src/layouts/MainLayout/MainLayout.module.scss
+++ b/src/layouts/MainLayout/MainLayout.module.scss
@@ -1,7 +1,6 @@
 @import "../../styles/config";
 
 .root {
-  overflow-x: hidden;
   height: 100vh;
   display: flex;
   flex-direction: column;
